@@ -18,6 +18,11 @@
 
 ## -*- texinfo -*-
 ## @deftypefn {Function File} {} mahalanobis (@var{x}, @var{y})
+##
+## @code{mahalanobis} is deprecated and will be removed in Octave version 4.6.
+## See the @code{mahal} function in the statistics package from Octave-Forge
+## for equivalent functionality.
+##
 ## Return the Mahalanobis' D-square distance between the multivariate
 ## samples @var{x} and @var{y}.
 ##
@@ -30,6 +35,13 @@
 ## Adapted-By: jwe
 
 function retval = mahalanobis (x, y)
+
+  persistent warned = false;
+  if (! warned)
+    warned = true;
+    warning ("Octave:deprecated-function",
+             "mahalanobis is obsolete and will be removed from a future version of Octave, please use mahal from the statistics package in Octave-Forge instead");
+  endif
 
   if (nargin != 2)
     print_usage ();
